# Flora

./: .gitignore  CMakeLists.txt  README.md
docs/: DonutPython_12Week_Plan.md  DonutRender_Week9_MaterialSupport.md  DonutRender_Week9_Report.md  QuickStart.md  RTXNS_Bistro_AlphaTested_Shadow_Report.md  RTXNS_Iteration_A_Stage_Summary_2026-07-18.md  RTXNS_LiDAR_Output_Feasibility_Study.md  RTXNS_MultiSample_Shadow_Report.md  RTXNS_OMM_Integration_Plan.md  RTXNS_OMM_Integration_Report.md  RTXNS_Parallel_Render_POC_Report.md  RTXNS_Parallel_Render_Weekly_Report_2026-07-11.md  RTXNS_Phase1_RayTracedShadow.md  RTXNS_RayTracedShadow_Debugging_Notes.md  RTXNS_ReplicaCAD_Articulation_Week_A3_Report.md  RTXNS_ReplicaCAD_Assembly_Week_A2_Report.md  RTXNS_ReplicaCAD_Manifest_Week_A1_Report.md  RTXNS_ReplicaCAD_Multimodal_Week_A4_Report.md  RTXNS_ShadowQuality_Optimization_Report.md  RTXNS_SoftShadow_Proposal.md  RTXNS_Summer_SlangNeural_12Week_Plan.md  RTXNS_Weekly_Report_2026-07-01.md  prompt_alpha_test_optimization.md  prompt_alpha_tested_rt_shadows.md
output/: RTXNS_Dynamic_Embodied_Sim_Plan.md  parallel_render_efficiency_roadmap.md  replicacad_manifest_report.json
output/bench_parallel/: replicacad_single_cmdlist_720p.json  replicacad_single_cmdlist_rt_720p.json
output/genesis_style_py/: genesis_style_frame_000.ppm
output/parallel_render/: bottleneck_results.json  parallel_render_results.json
output/replicacad_a3/: all_scene_smoke.json  apt_0.donut_scene.json  apt_0.donut_scene.manifest.json  apt_0_articulation_raster_metrics.json  apt_0_articulation_rt_metrics.json  apt_0_dynamic_parallel_rt8.json  apt_0_dynamic_stress.json
output/replicacad_a4/: apt_0.donut_scene.manifest.json  apt_0_multimodal_benchmark.json  apt_0_multimodal_metrics.json  apt_0_multimodal_stress.json
output/replicacad_complete/: all_scene_smoke.json  apt_0.donut_scene.json  apt_0.donut_scene.manifest.json  apt_0_parallel_rt8_balanced.json  apt_0_parallel_rt8_complete_first.json  apt_0_parallel_rt8_stage_first.json  apt_0_parallel_rt8_stress.json  apt_0_raster_metrics.json  apt_0_rt_metrics.json
output/report/: regression_report.json
output/shadow_test/: no_shadow.ppm  rt_shadow.ppm
outputs/lidar_smoke/: lidar_points.ply  lidar_stats.json
python/DonutRenderPy/: __init__.py
python/donut_render_py/: __init__.py  donut_scene_compiler.py  errors.py  objects.py  replicacad.py  runtime.py  scene_desc.py  urdf.py
python/rtxns_genesis_style/: __init__.py  glb_builder.py  renderer.py  sensor.py
samples/: python_demo_common.py  replica_cad_demo.py  sapien_replica_cad_demo.py
samples/DonutRenderPyDemo/: donut_render_demo_v0_1.py  donut_render_demo_v0_5.py  donut_render_material_texture_demo.py
samples/GenesisStylePy/: genesis_style_example.py
samples/HeadlessPbrPy/: headless_pbr_example.py
src/: CMakeLists.txt
src/PythonBindings/: CMakeLists.txt  headless_pbr.cpp  headless_pbr.h  py_bindings_common.h  py_interface.cpp  py_interface_donut_native.cpp
src/RayTracedShadow/: AccelerationStructure.cpp  AccelerationStructure.h  CMakeLists.txt  OMMBaker.cpp  OMMBaker.h  RayTracedShadowPass.cpp  RayTracedShadowPass.h  SceneGeometryProvider.cpp  SceneGeometryProvider.h  ShadowTypes.h
src/RayTracedShadow/shaders/: shaders.cfg  shadow_blur_cs.hlsl  shadow_composite_cs.hlsl  shadow_rayquery_cs.hlsl  shadow_types.hlsl
tests/: test_replicacad_articulation.py  test_replicacad_assembly.py  test_replicacad_manifest.py  test_replicacad_transforms.py  test_sensor_products.py
tools/: bench_final.py  bench_replicacad_complete_parallel.py  bench_replicacad_dynamic_parallel.py  bench_replicacad_multimodal.py  bench_replicacad_multiprocess_rt.py  bench_replicacad_parallel.py  bench_replicacad_parallel_common_tonemap.py  capture_niagara.py  check_bistro.py  check_dds.py  inspect_replicacad_dataset.py  make_rtxns_vs_niagara.py  make_rtxns_vs_niagara_new.py  parallel_render_bottleneck.py  parallel_render_poc.py  render_replicacad_complete_scene.py  render_replicacad_dynamic_scene.py  render_replicacad_multimodal.py  run_regression.py  smoke_async.py  smoke_batch_test.py  smoke_replicacad_complete_scenes.py  stress_replicacad_dynamic_scene.py  stress_replicacad_multimodal.py  test_bistro_shadow.py  test_blur_compare.py  test_mb.py  test_omm_compare.py  test_omm_experiment.py  test_omm_rigorous.py  test_omm_samples.py  test_omm_simple.py  test_omm_steady.py  test_omm_stress.py  test_parallel_scaling.py  test_ring_fix.py  test_rt_shadow.py  test_shadow_samples_compare.py
tools/donut_render/: api_lifecycle_smoke.py  backend_render_smoke.py  demo_incremental_smoke.py  demo_manifest_smoke.py  dirty_state_benchmark.py  dynamic_geometry_smoke.py  dynamic_geometry_verification.md  genesis_dynamic_geometry_smoke.py  genesis_multimodal_smoke.py  genesis_style_material_texture_smoke.py  incremental_paths_benchmark.py  incremental_vs_rebuild_compare.py  long_sequence_stability.py  luisa_alignment_audit.py  material_texture_smoke.py  module_import_smoke.py  ownership_lifecycle_smoke.py  runtime_multimodal_smoke.py  scene_update_plan_smoke.py  week10_dynamic_geometry_smoke.py  week10_dynamic_verification.md  week10_genesis_dynamic_smoke.py  week10_long_sequence_stability.py  week1_audit.py  week2_api_smoke.py  week2_backend_smoke.py  week4_demo_smoke.py  week5_lifecycle_smoke.py  week6_dirty_state_benchmark.py  week7_scene_api_plan_smoke.py  week8_demo_smoke.py  week8_incremental_benchmark.py  week8_incremental_compare.py
tools/lidar/: open3d_lidar_smoke.py
